resolvido problema de visibilidade no input do form e adicionado tag <a> para a logo

--- a/Projeto_Segundo_Html+Css/index.html
+++ b/Projeto_Segundo_Html+Css/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div id="logo"> 
-            <img src="logo_eng-copia-removebg-att.png" alt="logo" width="50%">
+          <a href="./index.html"> <img src="logo_eng-copia-removebg-att.png" alt="logo" width="50%"></a> 
         </div>
 
         
